Xcode: Fix quoting of paths with square brackets

The Xcode project file format needs paths containing square
brackets ('[' or ']') to be quoted.

Issue: #20555